# Multigame

./: CMakeLists.txt  main.cpp
debug/: Logger.cpp  Logger.h  Utils.cpp  Utils.h
libs/: glad.c
libs/glad/: glad.h
libs/imgui/: imgui_impl_glfw_gl3.cpp
libs/shader/: shader_m.h  shader_s.h
libs/stb_image/: stb_image.h
main_app/: MainApp.cpp  MainApp.h
main_app/anim_player/: AnimPlayer.cpp  AnimPlayer.h
main_app/app_select/: AppSelect.cpp  AppSelect.h
main_app/applications/: IApp.cpp  IApp.h
main_app/applications/kids_fantasy/: GameDefinitions.h  MainGame.cpp  MainGame.h
main_app/applications/kids_fantasy/lines/: LinesMgr.cpp  LinesMgr.h
main_app/applications/kids_fantasy/math_logic/: MathLogic.cpp  MathLogic.h
main_app/applications/kids_fantasy/reels_area/: ReelsArea.cpp  ReelsArea.h
main_app/applications/kids_fantasy/reels_area/reels/: Reel.cpp  Reel.h
main_app/applications/kids_fantasy/status_line/: StatusLine.cpp  StatusLine.h
main_app/applications/particle_builder/: MainGame.cpp  MainGame.h
main_app/applications/roulette/: GameDefinitions.h  MainGame.cpp  MainGame.h
main_app/applications/roulette/math_logic/: RouletteMathLogic.cpp  RouletteMathLogic.h
main_app/applications/roulette/status_line/: StatusLine.cpp  StatusLine.h
main_app/applications/roulette/table_area/: TableArea.cpp  TableArea.h
main_app/applications/roulette/wheel_area/: Ball.cpp  Ball.h  Wheel.cpp  Wheel.h  WheelArea.cpp  WheelArea.h
main_app/audio_player/: AudioPlayer.cpp  AudioPlayer.h
main_app/button/: Button.cpp  Button.h
main_app/font/: Font.cpp  Font.h
main_app/interpolator/: Easing.h  Interpolator.cpp  Interpolator.h
main_app/panel/: Panel.cpp  Panel.h
main_app/particle_system/: ParticleSystem.cpp  ParticleSystem.h  Random.h
main_app/renderer/: Renderer.cpp  Renderer.h
main_app/texture/: DDSFormat.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureDDS.cpp  TextureDDS.h
main_app/timer/: ITimer.cpp  ITimer.h  TimerMgr.cpp  TimerMgr.h
src/: config.json
src/shaders/: fragment_3D.fs  fragment_clip.fs  fragment_crop.fs  fragment_lens.fs  fragment_shader_font.fs  fragment_wave.fs  vertex_3D.vs  vertex_crop.vs  vertex_rect.vs  vertex_shader_font.vs
